--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   font-family: 'yg-jalnan'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_four@1.2/JalnanOTF00.woff') format('woff'); font-weight: normal; font-style: normal; 
 }
 
+
 .ad-banner
 {
     width : 320px;
@@ -17,6 +18,8 @@
     width : 320px;
     margin : 0 auto;
 }
+
+
 .navbar
 {
 font-family : yg-jalnan;
@@ -26,9 +29,12 @@ font-family : yg-jalnan;
 {
     font-family : yg-jalnan;
 }
+
+
 body {
   font-family: sans-serif;
   background-color: #ffffff;
+    box-sizing : border-box;
 }
 
 .file-upload {
@@ -71,6 +77,10 @@ body {
   text-align: center;
 }
 
+#loading {
+  display: none;
+}
+
 .file-upload-input {
   position: absolute;
   margin: 0;
@@ -83,13 +93,13 @@ body {
 }
 
 .image-upload-wrap {
+    width: 60%;
+    margin: 0 auto;
     position: relative;
-    object-fit : contain;
-    border-radius : 10px;
-    border : dashed 1.5px #35465d;
-    background-color : #ffffff;
-    width : 50%;
-    margin : 0 auto;
+    object-fit: contain;
+    border-radius: 10px;
+    border: dashed 1.5px #35465d;
+    background-color: #ffffff;
 }
 
 .image-dropping,
@@ -120,10 +130,24 @@ body {
 }
 
 .file-upload-image {
-  max-height: 200px;
-  max-width: 200px;
+  max-height: 60%;
+  max-width: 60%;
   margin: auto;
-  padding: 20px;
+  padding: 10px;
+}
+
+.try-again-btn {
+  border-radius: 40px;
+  border: solid 1.5px #35465d;
+  background-color: #35465d;
+}
+
+.try-again-text {
+  display: block;
+  font-size: 1.5rem;
+  text-align: center;
+  color: #ffffff;
+  padding: 4px 15px;
 }
 
 .remove-image {
@@ -173,7 +197,7 @@ body {
 
 .section
 {
-    margin-top : 100px;
+    margin-top : 50px;
 }
 
 .title
@@ -358,6 +382,101 @@ body {
 }
 
 
+.Friendly-box {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 2rem;
+  border-radius: 10px;
+  width: 100%;
+  background-color: rgba(195, 140, 102, 0.2);
+}
+.Friendly-bar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 2rem;
+  border-radius: 10px;
+  background-color: rgba(195, 140, 102, 1);
+}
+
+
+.Prototype-box {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 2rem;
+  border-radius: 10px;
+  width: 100%;
+  background-color: rgba(195, 140, 102, 0.2);
+}
+.Prototype-bar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 2rem;
+  border-radius: 10px;
+  background-color: rgba(195, 140, 102, 1);
+}
+
+
+.Active-box {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 2rem;
+  border-radius: 10px;
+  width: 100%;
+  background-color: rgba(195, 140, 102, 0.2);
+}
+.Active-bar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 2rem;
+  border-radius: 10px;
+  background-color: rgba(195, 140, 102, 1);
+}
+
+
+.Passion-box {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 2rem;
+  border-radius: 10px;
+  width: 100%;
+  background-color: rgba(195, 140, 102, 0.2);
+}
+.Passion-bar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 2rem;
+  border-radius: 10px;
+  background-color: rgba(195, 140, 102, 1);
+}
+
+
+.Reality-box {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 2rem;
+  border-radius: 10px;
+  width: 100%;
+  background-color: rgba(195, 140, 102, 0.2);
+}
+.Reality-bar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 2rem;
+  border-radius: 10px;
+  background-color: rgba(195, 140, 102, 1);
+}
+
+
 
 .percent-text {
   font-size: 1rem;
@@ -407,6 +526,32 @@ body {
 .Transcendence-animal-title {
     color: #e56995;
 }
+
+
+.Friendly-animal-title {
+    color: #3ba363;
+}
+
+
+.Prototype-animal-title {
+    color: #3ba363;
+}
+
+
+.Active-animal-title {
+    color: #3ba363;
+}
+
+
+.Passion-animal-title {
+    color: #3ba363;
+}
+
+
+.Reality-animal-title {
+    color: #3ba363;
+}
+
 
 
 
