여자버전 업데이트 test2

--- a/style.css
+++ b/style.css
@@ -32,9 +32,10 @@ font-family : yg-jalnan;
 
 
 body {
-  font-family: sans-serif;
+  font-family: yg-jalnan;
   background-color: #ffffff;
     box-sizing : border-box;
+    
 }
 
 .file-upload {
